--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,1 +1,9 @@
+<button class="btn btn-primary" (click)="carAdd()">Add car</button>
+<p>{{ addCarStatus }}</p>
+<hr>
 <app-car></app-car>
+<app-car></app-car>
+
+<hr>
+<input type="text" class="form-control" (keyup.enter)="onKeyUp($event)">
+<p>{{inputText}}</p>
