--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,13 +1,18 @@
+<input type="text" class="form-control" [(ngModel)]="inputText">
+<br>
 <button class="btn btn-primary" (click)="carAdd()">Добавить машину</button>
 <p *ngIf="!carStatus; else successStatus">Машина не добавлена</p>
 <ng-template #successStatus>
   <p>Машина добавлена</p>
 </ng-template>
 <hr>
-<app-car></app-car>
-<app-car></app-car>
 
-<hr>
-<input type="text" class="form-control" #myInput (input)="onKeyUp(myInput.value)">
-<input type="text" class="form-control" [(ngModel)]="inputText">
-<p>{{inputText}}</p>
+<app-car *ngFor="let car of cars"></app-car>
+
+<ul>
+  <li *ngFor="let data of dates; let index = index">
+    <div>
+      {{data | uppercase}}
+    </div>
+  </li>
+</ul>
